// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarLink render default 1`] = `
<div
  className="sc-AxjAm iHbqWH"
>
  <div
    data-mock="NavLink"
  >
    {
  "className": "nav-link",
  "to": "/test-link",
  "exact": false
}
  </div>
</div>
`;

exports[`NavbarLink should render button 1`] = `
<div
  className="sc-AxjAm iHbqWH"
>
  <button
    data-mock="TransparentButton"
  >
    {
  "className": "sc-AxirZ fskEG nav-link"
}
  </button>
</div>
`;

exports[`NavbarLink should render exact 1`] = `
<div
  className="sc-AxjAm iHbqWH"
>
  <div
    data-mock="NavLink"
  >
    {
  "className": "nav-link",
  "to": "/test-link",
  "exact": true
}
  </div>
</div>
`;
